# preprocessor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
github/workflows/: workflow.yml
preprocessor_ml/: __main__.py
