[tool.poetry]
name = "preprocessor"
version = "0.1.0"
description = ""
authors = ["Felix Morillas-navas <felix.morillas-navas@adesso-insurance-solutions.de>"]
readme = "README.md"
packages = [{include = "preprocessor"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"