[tool.poetry]
name = "preprocessor_ml"
version = "0.1.0"
description = ""
authors = ["Felix Morillas-navas <felix.morillas-navas@adesso-insurance-solutions.de>"]
readme = "README.md"
packages = [{include = "preprocessor_ml"}]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"preprocessor_ml/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.poetry.dependencies]
python = "^3.11"
bumpver = "^2023.1129"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"